@@ -503,6 +503,9 @@
 				RelativePath=".\controls\richtextctrltest.cpp">
 			</File>
 			<File
+				RelativePath=".\misc\safearrayconverttest.cpp">
+			</File>
+			<File
 				RelativePath=".\controls\searchctrltest.cpp">
 			</File>
 			<File
