@@ -568,6 +568,10 @@ All:
 - Add possibility to validate the input files against a schema to wxrc.
 - Fix recently broken compilation with Intel compiler.
 
+wxMSW:
+
+- Optional better handling of SAFEARRAYs in wxAutomationObject (PB).
+
 
 3.0-RC1: (released 2013-10-07)
 ------------------------------
